# ======================== Elasticsearch Configuration =========================
# Estas lineas de configuracion son las que hay que añadir
# Este fichero se encarga de asignarle el minimo y maximo de memoria que puede usar elastic
# Esta limitado a usar solo 2 gigas de memoria RAM (cambiar a riesgo personal)
-Xms2g # minimo
-Xmx2g # maximo
# ========================= Fin de la Configuracion ============================
# A partir de aqui, el resto del archivo es autogenerado una vez que inicies por primera vez el nodo


-XX:+UseG1GC

## JVM temporary directory
-Djava.io.tmpdir=${ES_TMPDIR}

# Leverages accelerated vector hardware instructions; removing this may
# result in less optimal vector performance
20-:--add-modules=jdk.incubator.vector

# Required to workaround performance issue in JDK 23, https://github.com/elastic/elasticsearch/issues/113030
23:-XX:CompileCommand=dontinline,java/lang/invoke/MethodHandle.setAsTypeCache
23:-XX:CompileCommand=dontinline,java/lang/invoke/MethodHandle.asTypeUncached

# Lucene 10: apply MADV_NORMAL advice to enable more aggressive readahead
-Dorg.apache.lucene.store.defaultReadAdvice=normal

# Lucene provides a mechanism for shared mmapped arenas to be referenced between multiple threads
# this is to get around potential performance issues when closing shared arenas on many threads
# default to 1 to disable this feature
-Dorg.apache.lucene.store.MMapDirectory.sharedArenaMaxPermits=1

## heap dumps

# generate a heap dump when an allocation from the Java heap fails; heap dumps
# are created in the working directory of the JVM unless an alternative path is
# specified
-XX:+HeapDumpOnOutOfMemoryError

# exit right after heap dump on out of memory error
-XX:+ExitOnOutOfMemoryError

# specify an alternative path for heap dumps; ensure the directory exists and
# has sufficient space
# -XX:HeapDumpPath=/heap/dump/path

# specify an alternative path for JVM fatal error logs
-XX:ErrorFile=hs_err_pid%p.log

## GC logging
-Xlog:gc*,gc+age=trace,safepoint:file=gc.log:utctime,level,pid,tags:filecount=32,filesize=64m